<resources>
    <string name="app_name">calmscient</string>
    <string name="splash_science">The Science of Calm</string>
    <string name="welcome_message">Welcome to my app!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="or">or</string>
    <string name="happy_to_see_you">We are happy to see you.</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="discovery">Discovery</string>
    <string name="discovery_lower">The Discovery</string>
    <string name="exercises">Exercises</string>
    <string name="exercises_lower">Exercises</string>
    <string name="rewards">Rewards</string>
    <string name="rewards_lower">Rewards</string>
    <string name="my_medical_records">My medical records</string>
    <string name="weekly_summary">Weekly summary</string>
    <string name="favorites">Favorites</string>
    <string name="need_to_talk">Need to talk with someone?</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="mood_right_now">How is your mood right now?</string>
    <string name="day_today">How was your day?</string>
    <string name="bad">Bad</string>
    <string name="be_better">Could be better</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="spend_time">Who did you spend time with?</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="workmates">Workmates</string>
    <string name="others">Others</string>
    <string name="alone">Alone</string>
    <string name="take_medic_evening">Did you take your meds this evening?</string>
    <string name="take_medic_morning">Did you take your meds this morning?</string>
    <string name="hours_night">How many hours did you sleep last night?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="daily_journal">Daily journal</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="medications">Medications</string>
    <string name="medication_Details">Medications details</string>
    <string name="upcoming_medical_appointments">Upcoming medical appointments</string>
    <string name="screenings">Screenings</string>
    <string name="add_appointment">Add appointment</string>
    <string name="plz_confirm">Please confirm.</string>
    <string name="exit_app">Are you want to exit the app?</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="network_invalidation_error">Username or password is incorrect,Please retry again</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>
    <string name="strAlertMessage_Something">Something is not right here try again later</string>
    <string name="title_activity_home_fragment">Something is not right here try again later</string>
    <string name="no_appointments">No appointments</string>
    <string name="hospital_name1" translatable="false">SCD Hospital</string>
    <string name="doctor_name1">Dr.Hannah Johnson</string>
    <string name="provider">Provider</string>
    <string name="dosage">Dosage</string>
    <string name="tabletsPerDay">2 tablets per day</string>
    <string name="direction">Direction</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="asl">ASL</string>
    <string name="notifications">Notifications</string>
    <string name="license_key">License key</string>
    <string name="help_support">Help &amp; support</string>
    <string name="logout">Logout</string>
    <string name="add_medications">Add medications</string>
    <string name="alarm">Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="everyday">Every Day</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="duration">Duration</string>
    <string name="schedule_time_and_alarm">Schedule time &amp; alarm</string>
    <string name="with_meal">With meal</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="cancel">Cancel</string>
    <string name="anxiety">Managing anxiety</string>
    <string name="stress">Changing your response to stress</string>
    <string name="control">Taking control</string>
    <string name="alchol_free">Alcohol-free</string>
    <string name="drinks">Drinks</string>
    <string name="argument">Argument</string>
    <string name="drink_count">Drink counts</string>
    <string name="terms">Accept <u>terms and conditions</u></string>
    <string name="emergency_resource">Emergency resource</string>
    <string name="doctor_name">Dr. Samuel parker</string>
    <string name="hospital_name">Central park hospital</string>
    <string name="doctor_phone_number"><u><a href="tel:(804)0938172"><font color="#6E6BB3">(804)0938172</font></a></u></string>
    <string name="suicide_heading">988 Suicide &amp; crisis lifeline</string>
    <string name="suicide_text">Call or text 988 or chat 988lifeline.org. The 988 Suicide &amp; Crisis Lifeline is a national network of local crisis centers that provides free and confidential emotional support to people in suicidal crisis or emotional distress 24 hours a day, 7 days a week.</string>
    <string name="disaster_heading">Disaster distress helpline</string>
    <string name="disaster_text">The national Disaster Distress Helpline is available for anyone experiencing emotional distress related to natural or human-caused disasters.Call or text <u><a href="tel:1-800-985-5990"><font color="#6E6BB3">1-800-985-5990</font></a></u> to be connected to a trained, caring counselor, 24/7/365.
</string>
    <string name="crisis_heading">Crisis text line</string>
    <string name="crisis_text">Text MHA to<a href="sms:678678"><font color="#6E6BB3"> 741741</font></a> and you\'ll be connected to a trained Crisis Counselor. Crisis Text Line provides free, text-based support 24/7.</string>
    <string name="trevor_heading">The trevor project</string>
    <string name="trevor_text">
        Call <u><a href="tel:1-866-488-7386"><font color="#6E6BB3">1-866-488-7386</font></a></u> or text START to <a href="sms:678678"><font color="#6E6BB3">678678</font></a>.A national 24-hour, toll free confidential suicide hotline for LGBTQ youth.
</string>
    <string name="trans_helpline_heading">Trans lifeline</string>
    <string name="trans_helpline_text">Dial <u><a href="tel:877-565-8860"><font color="#6E6BB3">877-565-8860</font></a></u> for US and <u><a href="tel:877-330-6366"><font color="#6E6BB3">877-330-6366</font></a></u> for Canada.Trans Lifeline\'s Hotline is a peer support service run by trans people, for trans and questioning callers.
</string>
    <string name="disaster_number">1-800-985-5990</string>
    <string name="crisis_number">741741</string>
    <string name="trevor_number">1-866-488-7386</string>
    <string name="trans_number">877-565-8860</string>
    <string name="next_appointments">Next appointments</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="appointments_details">Appointment details</string>
    <string name="your_history">History</string>
    <string name="your_results">Your results</string>
    <string name="summary_takingcontrol">Summary</string>
    <string name="glossary">Glossary</string>
    <string name="torch_national"><u>US National Institute of Health American Psychological Association Stanford University</u></string>
    <string name="torch_phq">PHQ9 Copyright \u00a9 Pfizer Inc. All rights reserved.Reproduced with permission. PRIME-MD \u00AE is a trademark of Pfizer Inc.</string>
    <string name="manage_anxiety">Manage anxiety</string>
    <string name="managing_anxiety">Managing anxiety</string>
    <string name="introduction">Introduction</string>
    <string name="neuropsychology">Neuropsychology of anxiety</string>
    <string name="the_neuropsychology">The neuropsychology of anxiety</string>
    <string name="meet_nora_austin">Meet Nora,Austin and Melanie</string>
    <string name="calming_body">Calming the body</string>
    <string name="anxiety_worry">Anxiety and worry</string>
    <string name="moral_deficiency">Moral deficiency or anxiety?</string>
    <string name="moral_deficiency_anxiety">Moral deficiency or anxiety?</string>
    <string name="anxiety_hide">Where can anxiety hide?</string>
    <string name="postpone_worry">Learn to postpone your worry</string>
    <string name="anxiety_calming_title_two">Hyper-arousal</string>
    <string name="anxiety_calming_card_dialog_one">Anxiety, fear, irritation, panic.</string>
    <string name="anxiety_calming_card_dialog_one2">You might experience the “Fight or Flight” response.</string>
    <string name="more_info">More Info</string>
    <string name="more_desc_1">This assessment is based on the Patient Health Questionnaire (PHQ), which is a self-administered version of the PRIME-MD diagnostic instrument for common mental disorders.\n\nPHQ9 Copyright © Pfizer Inc. All rights reserved. Reproduced with permission. PRIME-MD ® is a trademark of Pfizer Inc.</string>
    <string name="journal_entry">Journal entry</string>
    <string name="write_down_what_have_you_recognized_about_how_biased_thinking_affects_your_emotions_and_behaviors">Write down what have you recognized about how biased thinking affects your emotions and behaviors.</string>
    <string name="save_it_to_weekly_summary_journal_entry">Save it to weekly summary journal entry</string>
    <string name="write_your_thoughts_here">Write your thoughts here...</string>
    <string name="nervous">Nervous</string>
    <string name="saved">Saved</string>
    <string name="there_is_no_right_or_wrong_answers">There is no right or wrong answers.\nThis exercise help connect\nthe thinking with the action.</string>
    <string name="ruminate_over_things_i_said_or_did_wrong">...ruminate over things I said or did wrong</string>
    <string name="this_is_your_report_tittle_biased_thinkings">This is your report \nTittle: Biased thinkings</string>
    <string name="were_any_of_these_reactions_familiar_to_you">Were any of these reactions familiar to you?</string>
    <string name="learning_to_identify_them_early_o_will_help_you_avoid">Learning to identify them early o will help you avoid the trap of biases thinking! But what can you do about it once you’ve identified it ?</string>
    <string name="rigid_biased_thinkings">Rigid biased thinkings</string>
    <string name="fear_talk">Fear talk</string>
    <string name="painful_emotions">Painful emotions</string>
    <string name="unhelpful_coping_skills_behaviors">Unhelpful coping skills/behaviors</string>
    <string name="trigger">Trigger</string>
    <string name="motivates">motivates</string>
</resources>