<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12sdp"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.ResultsinfoPopupFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lexendsemibold"
            android:gravity="center"
            android:text="@string/more_info"
            android:textAlignment="center"
            android:textColor="@color/black_head"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/lexendlight"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/more_desc_1"/>

</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:visibility="gone"
            android:text="@string/torch_phq"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:fontFamily="@font/lexendmedium"
            android:textColor="@color/example_7_button"
            android:text="@string/torch_national"/>

    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/skip_border"
            android:fontFamily="@font/lexendregular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/purple_100"
            android:textSize="18sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okbutton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/lexendregular"
            android:text="Ok"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>
</LinearLayout>