<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_border"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title TextView -->
        <TextView
            android:id="@+id/titleCalmingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/lexendmedium"
            android:gravity="center"
            android:text="@string/anxiety_calming_title_two"
            android:textAlignment="center"
            android:textColor="@color/black_head"
            android:textSize="@dimen/_13sdp" />

        <!-- Close Button -->
        <ImageView
            android:id="@+id/closeCalmingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="Close"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_recognize_close" />
    </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutCalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@+id/title"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/lexendlight"
                android:textColor="@color/black_head"
                android:text="@string/anxiety_calming_card_dialog_one" />
            <TextView
                android:id="@+id/tvInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/lexendlight"
                android:textColor="@color/black_head"
                android:text="@string/anxiety_calming_card_dialog_one2" />
        </LinearLayout>
</RelativeLayout>
